tests/baselines/reference/classExpression.errors.txt
==== tests/cases/conformance/classes/classExpression.ts (7 errors) ====
    var x = class C {
            ~~~~~
!!! error TS1109: Expression expected.
    }
    
    var y = {
        foo: class C2 {
             ~~~~~
!!! error TS1109: Expression expected.
                   ~~
!!! error TS1005: ':' expected.
                      ~
!!! error TS1005: ',' expected.
                   ~~
!!! error TS2304: Cannot find name 'C2'.
        }
    }
    ~
!!! error TS1128: Declaration or statement expected.
    
    module M {
        var z = class C4 {
                ~~~~~
!!! error TS1109: Expression expected.
        }
    }